# NOVA_PRO-on-ICP

./: .gitignore  AGENTS.md  AI_Extension_Register.csv  AI_Foundation_Model_Register.csv  AI_Protocol_Register.csv  Alpha_Agent_Register.csv  Architectural_Laws_Register.csv  BLOCKCHAIN_CLOUD_CHARTERS.md  CLOUD_ENGINE_SOLUTION.md  CREATIVE_LICENSE.md  Cargo.toml  FRAMEWORKS.md  Frontend_Frontier_100_Register.csv  LICENSE.md  Makefile  Master_Tier_Register.csv  PLATFORM_COMPLETE.md  PROTOCOL_CHARTERS.md  Phantom_Blockchain_Model_Register.csv  QUIPU_IMPLEMENTATION_SUMMARY.md  README.md  SSN_ALPHA_CHARTER.md  UNDERSTANDING_PROTOCOLS.md  bridge.manifest.json  dfx.json  founder-dashboard.html  founder-setup.bat  index.html  install.sh  llms.txt  motoko_latest.html  nova.json  package-lock.json  package.json  sns_init.yaml  tsconfig.json  validate-platform.sh
.nova/: last_diag.txt
ai/: type-map.json
docs/: DFINITY_GRANT_APPLICATION.md  FUNDING.md  TECHNOLOGY_INTEGRATION.md
effecttrace/: README.md
languages/: INTEGRATION.md  README.md  SANSKRIT_PROTO.md  TYPE_ISOMORPHISM.md
protocols/: agri-protocol.js  geometric-key-protocol.js  net-protocol.js
runtime/: alpha-protocols-201-220.ts  alpha-protocols-201-240.ts  alpha-protocols-241-275.ts  bootstrap.ts  cpl_interpreter.py  index.ts  native-runtime.ts  nova_python_bridge.py  protocol-binder.ts
scripts/: deploy-mainnet.sh  nova
sdk/: README.md  (+6 more)
src/organisms/ssn_gov/: Cargo.toml
src/organisms/ssn_gov/src/: lib.rs
src/organisms/ssn_trust/: Cargo.toml
src/organisms/ssn_trust/src/: lib.rs
src/organisms/ssn_work/: Cargo.toml
src/organisms/ssn_work/src/: lib.rs
(+477 files in other folders)
