[package]
name = "ssn_gov"
version = "0.1.618"
edition = "2021"
description = "SSN-GOV: Governance Weight Token — ICRC-1 compliant fungible sub-coin (non-exportable)"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
