[package]
name = "ssn_trust"
version = "0.1.618"
edition = "2021"
description = "SSN-TRUST: Reputation-Backed Credit Token — ICRC-1 compliant fungible sub-coin"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
